src/test/deca/context/invalid/cast2.deca
class A {

}

class B {

}

class C extends B {

}

{
    B b = new B();
    A a = (A) (b);
}
//ERROR :15: